--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^18.3.1",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.1",
     "react-loader-spinner": "^6.1.6",
     "react-rating-stars-component": "^2.2.0",
