--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.65.1",
     "axios": "^1.7.9",
-    "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
     "generate-react-cli": "^8.4.9",
@@ -24,6 +23,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.1",
     "react-loader-spinner": "^6.1.6",
+    "react-mui-sidebar": "^1.6.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
